--- a/manuscript/ms.Rmd
+++ b/manuscript/ms.Rmd
@@ -87,7 +87,7 @@ General points we could go over that apply to all data sets before going into de
 
 The breeding season month, which defines the timing of sampling, varies somewhat by site but always occurs in the spring. Most species observed are diurnal and include both resident and migrant species. Early in the morning observers conduct point counts wherein the observer tracks each minute. Each point count contains species, sex, and distance to each bird (measured with a laser rangefinder except in the case of flyovers) seen or heard during a 6-minute period after a 2-minute acclimation period. To enable subsequent modeling of detectability, additional data collected during the point counts include: weather, distances from observers to birds, and the detection methods. The point count surveys for NEON were modified from the Integrated Monitoring in Bird Conservation Regions (IMBCR): Field protocol for spatially-balanced sampling of landbird populations [@pavlacky2017statistically]. 
 
-To protect species of concern, their taxonomic IDs are ‘fuzzed.’ This means the data are provided with a taxonomic identification at one higher taxonomic level than where the protection occurs. For example, if a threatened Black-capped vireo (Vireo atricapilla) is recorded by a NEON technician, the taxonomic identification is fuzzed to Vireo in the data. Rare, threatened and endangered species are those listed as such by federal and/or state agencies.
+To protect species of concern, their taxonomic IDs are ‘fuzzed.’ This means the data are provided with a taxonomic identification at one higher taxonomic level than where the protection occurs. For example, if a threatened Black-capped vireo (_Vireo atricapilla_) is recorded by a NEON technician, the taxonomic identification is fuzzed to Vireo in the data. Rare, threatened and endangered species are those listed as such by federal and/or state agencies.
 
 **Data Wrangling Decisions** Bird point count data (‘DP1.10003.001’), consist of a list of two associated data frames: `brd_countdata` and `brd_perpoint`). The former data frame contains information such as locations, species identities, and their counts. The second data frame contains additional location information such as latitude longitude coordinates and environmental conditions during the time of the observations. It is relatively straightforward to prepare the bird point count data for biodiversity research. We first combined both data frames into one and then removed columns that are likely not needed (e.g., laboratory names, publication dates, etc.).
 
@@ -169,9 +169,9 @@ NEON manages plant taxonomic entries with a master taxonomy list that is based o
 
 # Results (or how to get and use tidy NEON organismal data)
 
-All cleaned data products can be obtained from the R package `neonDivData`, which can be installed from Github. Installation instructions can be found on the Github webpage (https://github.com/daijiang/neonDivData). Table \@ref(tab:dataSummary) shows the brief summary of all data products. To get a specific data product, we can just call the objects in the `data_product` column in Table x. Such data products include cleaned (and standardized if needed) occurrence data for the taxonomic groups covered. If environmental information and species measurements were provided by NEON for some taxonomic groups, they are also included in these data products. Information such as latitude, longitude, and elevation for all taxonomic groups were saved in the `neon_locations` object of the R package. Information about species scientific names and identification references of all taxonomic groups were saved in the `neon_taxa` object. 
+All cleaned data products can be obtained from the R package `neonDivData`, which can be installed from Github. Installation instructions can be found on the Github webpage (https://github.com/daijiang/neonDivData). Table \@ref(tab:dataSummary) shows the brief summary of all data products. To get a specific data product, we can just call the objects in the `data_product` column in Table \@ref(tab:dataSummary). Such data products include cleaned (and standardized if needed) occurrence data for the taxonomic groups covered and are equivalent to the “observation” table of the ecocomDP data format. If environmental information and species measurements were provided by NEON for some taxonomic groups, they are also included in these data products. Information such as latitude, longitude, and elevation for all taxonomic groups were saved in the `neon_locations` object of the R package, which is equivalent to the “sampling_location” table of the ecocomDP data format. Information about species scientific names and identification references of all taxonomic groups were saved in the `neon_taxa` object, which is equivalent to the “taxon” table of the ecocomDP data format. 
 
-(ref:Table1SummaryCap) **Summary of data products included in this study.** 
+(ref:Table1SummaryCap) **Summary of data products included in this study.**
 
 ```{r dataSummary, echo=FALSE}
 knitr::kable(neonDivData::data_summary, 
@@ -199,15 +199,18 @@ sp_rich_plant = left_join(sp_rich_plant,
                                       decimalLongitude = mean(decimalLongitude)))
 ```
 
+Figure \@ref(fig:Fig2Map) shows the utility of NEON data for exploring macroecological patterns. One of the most well known and studied macroecological patterns is the latitudinal biodiversity gradient, wherein sites are more speciose at lower latitudes relative to higher latitudes [@fischer1960latitudinal; @hillebrand2004generality]. Herbaceous plants of NEON generally follow this pattern, but interestingly, @read2018among found that NEON small mammal data do not support this pattern.  
+
+
 (ref:Fig2MapCap) Distribution of plant species richness across all NEON terrestrial sites. Alaska, Hawaii, and Puerto Rico were rearranged to save space.
 
 ```{r, Fig2Map, fig.cap="(ref:Fig2MapCap)"}
 include_graphics(here::here("manuscript/figures/p_plant.png"))
 ```
 
+In addition to allowing for quick exploration of macroecological patterns of diversity, the data products presented in this paper also enable investigation of effects of taxonomic resolution on diversity indices since taxonomic information is preserved for observations under family level for all taxonomic groups. The degree of taxonomic resolution varies for NEON taxa depending on the diversity of the group and the level of taxonomic expertise needed to identify an organism to the species level, with more diverse groups having greater uncertainty. Beetles are one of the most diverse groups of organisms on Earth and wide-ranging geographically, making them ideal bioindicators of environmental change [@rainio2003ground]. To illustrate how the use of the beetle data product presented in this paper enables NEON data users to easily explore the effects of taxonomic resolution on community-level taxonomic diversity metrics, we calculated Jost diversity indices [@jost2006entropy] for beetles at the Oak Ridge National Laboratory (ORNL) NEON site for data subsetted at the genus, species, and subspecies level. Jost indices are essentially Hill Numbers quantifying species diversity that vary in how abundance is weighted with a parameter q. Higher values of q give lower weights to low-abundance species with q = 0 being equivalent to species richness and q = 1 representing the effective number of species given by the Shannon entropy. These indices are plotted as rarefaction curves, which assess the sampling efficacy. When rarefaction curves asymptote they suggest that additional sampling will not capture additional taxa. Statistical methods presented by @chao2014rarefaction provide estimates of sampling efficacy beyond the observed data (i.e., extrapolated values shown by dashed lines in Fig. \@ref(fig:Fig3Curve)). For the ORNL beetle data, Jost indices calculated with higher values of q (i.e., q > 0) indicate sampling has reached an asymptote in terms of capturing diversity regardless of taxonomic resolution (i.e., genus, species, subspecies). However, rarefaction curves for q = 0, which is equivalent to species richness do not asymptote, even with extrapolation. These plots suggest that if a researcher is interested in low abundance, rare species, then NEON beetle data streams at ORNL may need to mature with additional sample collections over time before confident inferences may be made, especially below the taxonomic resolution of genus.
 
-(ref:Fig3CurveCap) Rarefaction of beetle abundance data from collections made at the Oak Ridge National Laboratory (ORNL) National Ecological Observatory Network (NEON) site from 2014-2020 generated using the iNEXT package in R [@hsieh2016inext] based on different levels of taxonomic resolution (i.e., genus, species, subspecies). Different colors indicate Jost Indices (i.e., Hill Numbers quantifying species diversity that vary in how abundance is weighted with the parameter q). Higher values of q give lower weights to low-abundance species with q = 0 being equivalent to species richness and q = 1 representing the effective number of species given by the Shannon entropy [q = 1; @jost2006entropy]. 
-
+(ref:Fig3CurveCap) Rarefaction of beetle abundance data from collections made at the Oak Ridge National Laboratory (ORNL) National Ecological Observatory Network (NEON) site from 2014-2020 generated using the iNEXT package in R [@hsieh2016inext] based on different levels of taxonomic resolution (i.e., genus, species, subspecies). Different colors indicate Jost Indices with differing values of q [@jost2006entropy].
 
 ```{r, Fig3Curve, fig.cap="(ref:Fig3CurveCap)"}
 include_graphics(here::here("manuscript/figures/beetle_rarefaction.png"))
@@ -229,7 +232,7 @@ All codes that conducted the data wrangling decisions were available online (Git
 
 # Conclusion
 
-highlight value of harmonized data for community of researchers to advance the field. Highlight value of collaboration between NEON user community and NEON staff for advancing NEON enabled science.
+Macrosystems ecology is at the start of an exciting new chapter with the decades long awaited buildout of NEON completed and standardized data streams from all sites in the observatory becoming publicly available online. As the research community embarks on discovering new scientific insights from NEON data, it is important that we strive to make our analyses and all derived data as reproducible as possible to ensure that connections across studies will be possible. Harmonized data sets will help in this endeavour because they naturally promote the collection of provenance as data are collated into derived products [O’Brien et al. In review; @reichman2011challenges]. Harmonized data also make synthesis easier because efforts to clean and format data leading up to analyses do not have to be repeatedly performed by individual researchers (O’ Brien et al. In review). The derived data products presented here in the ecocomDP format illustrate a potential path forward in achieving a reproducible framework for data derived from NEON organismal data for community ecology analyses.Highlight value of collaboration between NEON user community and NEON staff for advancing NEON enabled science.
 
 
 
