--- a/manuscript/ref.bib
+++ b/manuscript/ref.bib
@@ -414,6 +414,17 @@
   publisher={Oxford University Press}
 }
 
+@article{chao2014rarefaction,
+  title={Rarefaction and extrapolation with Hill numbers: a framework for sampling and estimation in species diversity studies},
+  author={Chao, Anne and Gotelli, Nicholas J and Hsieh, TC and Sander, Elizabeth L and Ma, KH and Colwell, Robert K and Ellison, Aaron M},
+  journal={Ecological monographs},
+  volume={84},
+  number={1},
+  pages={45--67},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
 @article{hsieh2016inext,
   title={iNEXT: an R package for rarefaction and extrapolation of species diversity (H ill numbers)},
   author={Hsieh, TC and Ma, KH and Chao, Anne},
@@ -434,4 +445,111 @@
   pages={363--375},
   year={2006},
   publisher={Wiley Online Library}
+}
+
+@article{jones2021synergies,
+  title={Synergies among environmental science research and monitoringnetworks: A research agenda},
+  author={Jones, JA and Groffman, PM and Blair, J and Davis, FW and Dugan, H and Euskirchen, EE and Frey, SD and Harms, TK and Hinckley, E and Kosmala, M and others},
+  journal={Earth's Future},
+  pages={e2020EF001631},
+  year={2021},
+  publisher={Wiley Online Library}
+}
+
+@article{record2020novel,
+  title={Novel insights to be gained from applying metacommunity theory to long-term, spatially replicated biodiversity data},
+  author={Record, Sydne and Voelker, Nicole M and Zarnetske, Phoebe L and Wisnoski, Nathan I and Tonkin, Jonathan D and Swan, Christopher and Marazzi, Luca and Lany, Nina and Lamy, Thomas and Compagnoni, Aldo and others},
+  journal={Frontiers in Ecology and Evolution},
+  volume={8},
+  pages={479},
+  year={2020},
+  publisher={Frontiers}
+}
+
+@article{egli2020taxonomic,
+  title={Taxonomic error rates affect interpretations of a national-scale ground beetle monitoring program at National Ecological Observatory Network},
+  author={Egli, Lauren and LeVan, Katherine E and Work, Timothy T},
+  journal={Ecosphere},
+  volume={11},
+  number={4},
+  pages={e03035},
+  year={2020},
+  publisher={Wiley Online Library}
+}
+
+@article{fischer1960latitudinal,
+  title={Latitudinal variations in organic diversity},
+  author={Fischer, Alfred G},
+  journal={Evolution},
+  volume={14},
+  number={1},
+  pages={64--81},
+  year={1960},
+  publisher={JSTOR}
+}
+
+@article{hillebrand2004generality,
+  title={On the generality of the latitudinal diversity gradient},
+  author={Hillebrand, Helmut},
+  journal={The American Naturalist},
+  volume={163},
+  number={2},
+  pages={192--211},
+  year={2004},
+  publisher={The University of Chicago Press}
+}
+
+@article{read2018among,
+  title={Among-species overlap in rodent body size distributions predicts species richness along a temperature gradient},
+  author={Read, Quentin D and Grady, John M and Zarnetske, Phoebe L and Record, Sydne and Baiser, Benjamin and Belmaker, Jonathan and Tuanmu, Mao-Ning and Strecker, Angela and Beaudrot, Lydia and Thibault, Katherine M},
+  journal={Ecography},
+  volume={41},
+  number={10},
+  pages={1718--1727},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+
+@article{rainio2003ground,
+  title={Ground beetles (Coleoptera: Carabidae) as bioindicators},
+  author={Rainio, Johanna and Niemel{\"a}, Jari},
+  journal={Biodiversity \& Conservation},
+  volume={12},
+  number={3},
+  pages={487--506},
+  year={2003},
+  publisher={Springer}
+}
+
+@article{ellison2010repeatability,
+  title={Repeatability and transparency in ecological research},
+  author={Ellison, Aaron M},
+  journal={Ecology},
+  volume={91},
+  number={9},
+  pages={2536--2539},
+  year={2010},
+  publisher={JSTOR}
+}
+
+@article{compagnoni2020popler,
+  title={popler: An r package for extraction and synthesis of population time series from the long-term ecological research (LTER) network},
+  author={Compagnoni, Aldo and Bibian, Andrew J and Ochocki, Brad M and Levin, Sam and Zhu, Kai and Miller, Tom EX},
+  journal={Methods in Ecology and Evolution},
+  volume={11},
+  number={2},
+  pages={258--264},
+  year={2020},
+  publisher={Wiley Online Library}
+}
+
+@article{reichman2011challenges,
+  title={Challenges and opportunities of open data in ecology},
+  author={Reichman, O James and Jones, Matthew B and Schildhauer, Mark P},
+  journal={Science},
+  volume={331},
+  number={6018},
+  pages={703--705},
+  year={2011},
+  publisher={American Association for the Advancement of Science}
 }
