--- a/manuscript/ref.bib
+++ b/manuscript/ref.bib
@@ -229,6 +229,28 @@
   year={2014}
 }
 
+@article{rudenko2011updates,
+  title={Updates on Borrelia burgdorferi sensu lato complex with respect to public health},
+  author={Rudenko, Nataliia and Golovchenko, Maryna and Grubhoffer, Libor and Oliver Jr, James H},
+  journal={Ticks and tick-borne diseases},
+  volume={2},
+  number={3},
+  pages={123--128},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{pritt2017proposal,
+  title={Proposal to reclassify Ehrlichia muris as Ehrlichia muris subsp. muris subsp. nov. and description of Ehrlichia muris subsp. eauclairensis subsp. nov., a newly recognized tick-borne pathogen of humans},
+  author={Pritt, Bobbi S and Allerdice, Michelle EJ and Sloan, Lynne M and Paddock, Christopher D and Munderloh, Ulrike G and Rikihisa, Yasuko and Tajima, Tomoko and Paskewitz, Susan M and Neitzel, David F and Johnson, Diep K Hoang and others},
+  journal={International journal of systematic and evolutionary microbiology},
+  volume={67},
+  number={7},
+  pages={2121},
+  year={2017},
+  publisher={Microbiology Society}
+}
+
 @article{martin2012mapping,
   title={Mapping where ecologists work: biases in the global distribution of terrestrial ecological observations},
   author={Martin, Laura J and Blossey, Bernd and Ellis, Erle},
@@ -359,6 +381,27 @@
   volume={18},
   number={1},
   year={2019}
+}
+
+@techreport{moulton2002revised,
+  title={Revised protocols for sampling algal, invertebrate, and fish communities as part of the National Water-Quality Assessment Program},
+  author={Moulton II, Stephen R and Kennen, Jonathan G and Goldstein, Robert M and Hambrook, Julie A},
+  year={2002},
+  institution={Geological Survey (US)}
+}
+
+@article{baker1997environmental,
+  title={Environmental monitoring and assessment program surface waters: field operations manual for lakes},
+  author={Baker, John R and Peck, David V and Sutton, Donna W},
+  journal={US Environmental Protection Agency, Washington},
+  year={1997}
+}
+
+@techreport{peck2006environmental,
+  title={Environmental Monitoring and Assessment Program --- Surface Waters: Western Pilot Study Field Operations Manual for Wadeable Streams},
+  author={Peck, D.V. and Herlihy and A.T. and Hill and B.H. and Hughes and R.M. and Kaufmann and P.R. and Klemm and D.J. and Lazorchak and J.M. and McCormick and F.H. and Peterson and S.A. and Ringold and P.L. and Magee and T. and and Cappaert, M.R.},
+  year={2006},
+  journal={US Environmental Protection Agency, Washington},
 }
 
 @article{hoekman2016design,
@@ -552,4 +595,12 @@
   pages={703--705},
   year={2011},
   publisher={American Association for the Advancement of Science}
+}
+
+@book{ralph1993handbook,
+  title={Handbook of field methods for monitoring landbirds},
+  author={Ralph, C John},
+  volume={144},
+  year={1993},
+  publisher={Pacific Southwest Research Station}
 }
